<resources>
    <string name="app_name">Github</string>
    <string name="name">Repository name:</string>
    <string name="privacy">Privacy:</string>
    <string name="stars">Stars:</string>
    <string name="forks">Forks:</string>
    <string name="private_repo">Private</string>
    <string name="public_repo">Public</string>
    <string name="network_error">Network error, please check your internet connection</string>
    <string name="no_more_data_error">No more data to load</string>
    <string name="unknown_error">An unexpected behaviour occured, Please try again later</string>
    <string name="description">Description:</string>
    <string name="owner_name">Owner name:</string>
    <string name="repositories">Repositories</string>
    <string name="load_more">Loading more repos, please wait.</string>
</resources>
